@@ -687,8 +687,6 @@ func xonksaver(user *WhatAbout, item junk.Junk, origin string) *Honk {
 		case "Page":
 			waspage = true
 			fallthrough
-		case "GuessWord": // dealt with below
-			fallthrough
 		case "Audio":
 			fallthrough
 		case "Image":
@@ -819,12 +817,6 @@ func xonksaver(user *WhatAbout, item junk.Junk, origin string) *Honk {
 			if ot == "Move" {
 				targ, _ := obj.GetString("target")
 				content += string(templates.Sprintf(`<p>Moved to <a href="%s">%s</a>`, targ, targ))
-			}
-			if ot == "GuessWord" {
-				what = "wonk"
-				content, _ = obj.GetString("content")
-				xonk.Wonkles, _ = obj.GetString("wordlist")
-				go savewonkles(xonk.Wonkles)
 			}
 			if what == "honk" && rid != "" {
 				what = "tonk"
@@ -1181,8 +1173,6 @@ func jonkjonk(user *WhatAbout, h *Honk) (junk.Junk, junk.Junk) {
 		fallthrough
 	case "event":
 		fallthrough
-	case "wonk":
-		fallthrough
 	case "honk":
 		j["type"] = "Create"
 		jo = junk.New()
@@ -1190,8 +1180,6 @@ func jonkjonk(user *WhatAbout, h *Honk) (junk.Junk, junk.Junk) {
 		jo["type"] = "Note"
 		if h.What == "event" {
 			jo["type"] = "Event"
-		} else if h.What == "wonk" {
-			jo["type"] = "GuessWord"
 		}
 		if h.What == "update" {
 			j["type"] = "Update"
@@ -1297,9 +1285,6 @@ func jonkjonk(user *WhatAbout, h *Honk) (junk.Junk, junk.Junk) {
 			if t.Duration != 0 {
 				jo["duration"] = "PT" + strings.ToUpper(t.Duration.String())
 			}
-		}
-		if w := h.Wonkles; w != "" {
-			jo["wordlist"] = w
 		}
 		atts := activatedonks(h.Donks)
 		if len(atts) > 0 {
