@@ -54,13 +54,6 @@ activities are ignored.
 Limited support.
 .It Vt Audio
 Limited Support.
-.It Vt GuessWord
-Guess the word game.
-(Unofficial extension.)
-The solution is stored in
-.Fa content
-with the possible words, one per line, in a file located at
-.Fa wordlist .
 .El
 .Pp
 Honk primarily supports HTML content, not markdown or other formats,
