@@ -26,6 +26,7 @@ import (
 	"github.com/andybalholm/cascadia"
 	"golang.org/x/net/html"
 	"humungus.tedunangst.com/r/webs/htfilter"
+	"humungus.tedunangst.com/r/webs/templates"
 )
 
 var tweetsel = cascadia.MustCompile("div[data-testid=tweetText]")
@@ -57,7 +58,7 @@ func hootextractor(r io.Reader, url string, seen map[string]bool) string {
 		if htfilter.HasClass(node, "Emoji") && alt != "" {
 			return alt
 		}
-		return fmt.Sprintf(" <img src='%s'>", htfilter.GetAttr(node, "src"))
+		return string(templates.Sprintf(" <img src='%s' alt='%s'>", htfilter.GetAttr(node, "src"), alt))
 	}
 
 	var buf strings.Builder
