@@ -2,6 +2,10 @@ changelog
 
 === next
 
++ Remove the wonk support. Fun's over, back to work.
+
++ All inclusive danger zone spoiler alerts.
+
 + Emu peeker
 
 + CSP compliance
